--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,8 @@ body {
 }
 .promo {
   box-shadow: 0px 7px 12px rgba(158, 158, 163, 0.1);
-  background: #fff1b8 url(../img/Pizza.png) no-repeat top 25px right 35px / 500px;
+  background: #fff1b8 url(../img/Pizza.png) no-repeat top 25px right 35px /
+    500px;
   border-radius: 10px;
   padding: 68px 70px;
   margin-bottom: 56px;
@@ -145,6 +146,7 @@ body {
   justify-content: space-between;
 }
 .card {
+  cursor: pointer;
   background: #ffffff;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
   border-radius: 7px;
@@ -413,6 +415,9 @@ body {
   font-size: 20px;
   line-height: 23px;
 }
+.hide * {
+  display: none;
+}
 @media (max-width: 1366px) {
   .container {
     max-width: 960px;
@@ -463,7 +468,8 @@ body {
     font-size: 18px;
   }
   .promo {
-    background: #fff1b8 url(../img/Pizza.png) no-repeat top -3px right -182px / 346px;
+    background: #fff1b8 url(../img/Pizza.png) no-repeat top -3px right -182px /
+      346px;
     background-position: top -3px right -182px;
     background-size: 346px;
   }
