--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body {
   justify-content: space-between;
   margin-bottom: 40px;
 }
+.swiper {
+  z-index: 0;
+}
 .input {
   background: #ffffff;
   border: 1px solid #d9d9d9;
@@ -103,11 +106,22 @@ body {
 }
 .promo {
   box-shadow: 0px 7px 12px rgba(158, 158, 163, 0.1);
-  background: #fff1b8 url(../img/Pizza.png) no-repeat top 25px right 35px /
-    500px;
+  background: #fff1b8 url(../img/pngegg.png) no-repeat right 20px / 550px;
   border-radius: 10px;
   padding: 68px 70px;
   margin-bottom: 56px;
+}
+.pizza {
+  background: #fff1b8 url(../img/promo/pizza.png) no-repeat right 20px / 550px;
+}
+.kebab {
+  background: #b8e5ff url(../img/promo/kebab.png) no-repeat right 20px / 550px;
+}
+.vegetables {
+  background: #b8ffc7 url(../img/promo/vegetables.png) no-repeat right 0 / 850px;
+}
+.sushi {
+  background: #ffb8ff url(../img/promo/sushi.png) no-repeat right 20px / 550px;
 }
 .promo-title {
   font-style: normal;
@@ -468,8 +482,7 @@ body {
     font-size: 18px;
   }
   .promo {
-    background: #fff1b8 url(../img/Pizza.png) no-repeat top -3px right -182px /
-      346px;
+    background: #fff1b8 url(../img/pngegg2.png) no-repeat right 20px / 550px;
     background-position: top -3px right -182px;
     background-size: 346px;
   }
