--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
 }
 .button-auth:hover img,
 .button-out:hover img {
-  content: url(../img/userBlack.svg);
+  content: url(/img/userBlack.svg);
   width: 16px;
   height: 18px;
 }
@@ -226,6 +226,7 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
+  display: flex;
 }
 .price,
 .category {
