--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ body {
 }
 .button-auth:hover,
 .button-out:hover,
-.button-login:hover {
+.button-login:hover,
+.button-primary:hover {
   background: #fcfcfc;
   color: #7a7a7a;
   border: 1px solid #dcdcdc;
@@ -82,6 +83,10 @@ body {
   border: 1px solid #1890ff;
   color: #ffffff;
   margin-right: 10px;
+  cursor: pointer;
+}
+.button-primary:hover > img {
+  content: url(/img/shopping-cart.svg);
 }
 .button-icon {
   margin-right: 6px;
@@ -433,6 +438,13 @@ body {
 .hide * {
   display: none;
 }
+.red {
+  background-color: lightpink;
+}
+.swiper {
+  z-index: 0;
+}
+
 @media (max-width: 1366px) {
   .container {
     max-width: 960px;
